Wed Aug 31 13:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode.h:
          Export the unaliased_kind method

Wed Aug 31 13:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BooleanSeqC.{h,cpp}:
        * tao/CharSeqC.{h,cpp}:
        * tao/DoubleSeqC.{h,cpp}:
        * tao/FloatSeqC.{h,cpp}:
        * tao/AnyTypeCode/BooleanSeqA.{h,cpp}:
        * tao/AnyTypeCode/CharSeqA.{h,cpp}:
        * tao/AnyTypeCode/DoubleSeqA.{h,cpp}:
        * tao/AnyTypeCode/FloatSeqA.{h,cpp}:
          Regenerated

Wed Aug 31 12:33:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/TypeCode.{h,cpp,inl}:
          Moved unaliased_kind to the cpp file, it uses a TypeCode_var
          which requires again the TypeCode_methods which causes issues
          with GCC4

Wed Aug 31 12:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/corba.h:
          Removed include of AnyTypeCode/TypeCode.h

        * tao/Exception.h:
          Removed _tc_exception_type

        * tao/Exception_Data.h:
          Added forward declaration CORBA::TypeCode_ptr

        * tao/Profile.h:
          Removed not needed forward declarations

Wed Aug 31 11:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/IFR_Service/be_global.h:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/Client_Request_Interceptor.h:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/Request_Interceptor.h:
        * tests/Portable_Interceptors/Request_Interceptor_Flow/Server_Request_Interceptor.h:
          Fixed GCC4 error

        * tao/TypeCode.cpp:
          Removed this file, it shouldn't be in the archive anymore

        * tao/Environment.i (_nil):
          Use a static cast instead of a c-style cast

        * tao/Object.{cpp,i} (is_nil):
          Use true/false instead of 1/0

        * tao/AnyTypeCode/TC_Constants_Forward.h: